# mc3000-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
docs/: ble-protocol-notes.md  examples.md  profile-schema.md  publishing.md  reverse-notes.md  safety-model.md  supported-devices.md
examples/: codex.json  cursor.json
skill/: SKILL.md
skill/checklists/: pre-start.md
skill/profiles/: nimh-aa-conservative-charge.json
src/mc3000_mcp/: __init__.py  protocol.py  safety.py  server.py  transport.py
tests/: __init__.py  test_protocol.py  test_safety.py  test_server.py  test_transport.py
